# agentx-hackathon-incident-agent

./: .env.example  .gitignore  AGENTS_USE.md  QUICKGUIDE.md  QWEN.md  README.md  SCALING.md  docker-compose.yml
.qwen/: settings.json  settings.json.orig
backend/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  exceptions.py  llm_provider.py  main.py  models.py  prompts.py  seed.py  test_server.py
backend/app/routes/: incidents.py  notifications.py  todos.py  webhooks.py
backend/app/schemas/: triage.py
backend/app/services/: incidents.py  incidents_with_webhook.py  notifications.py  peppermint.py
backend/app/tools/: codebase.py
backend/app/workflows/: hooks.py  triage.py
backend/scripts/: build_codebase_index.py
docs/: peppermint-api-docs.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/incidents/create/: page.tsx
frontend/src/app/incidents/created/: page.tsx
frontend/src/app/metrics/: charts.tsx  page.tsx
frontend/src/components/blocks/: CartSidebar.tsx  ErrorBanner.tsx  ProductCard.tsx  incident-form.tsx
frontend/src/components/ui/: alert.tsx  card.tsx  chart.tsx
frontend/src/lib/: actions.ts  config.ts  constants.ts  hooks.ts  schemas.ts  services.ts  types.ts
infrastructure/ticketing/: .env.example  README.md  docker-compose.yml
